--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
         }
 
         .hobbies-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
         }
 
@@ -178,7 +177,6 @@
             border: 1px solid #ddd;
             border-radius: 8px;
             overflow: hidden;
-            width: 200px;
             text-align: center;
             transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
             background-size: cover;
@@ -241,7 +239,6 @@
             }
 
             .hobby-box {
-                width: 100%;
                 height: 150px;
             }
         }
@@ -263,6 +260,23 @@
 
         #back-to-top:hover {
             background-color: var(--hover-color);
+        }
+
+        /* Additional styles for better accessibility */
+        a:focus {
+            outline: 2px dashed var(--primary-color);
+            outline-offset: 2px;
+        }
+
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            border: 0;
         }
     </style>
 </head>
@@ -328,27 +342,27 @@
             <div class="hobbies-container">
                 <a href="fitness.html" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
                     <p>Fitness</p>
-                    <img src="gym.png" alt="Fitness" style="display:none;">
+                    <img src="gym.png" alt="Fitness" class="sr-only">
                 </a>
                 <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
                     <p>Cooking</p>
-                    <img src="cooking.jpeg" alt="Cooking" style="display:none;">
+                    <img src="cooking.jpeg" alt="Cooking" class="sr-only">
                 </a>
                 <a href="reading.html" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
                     <p>Reading</p>
-                    <img src="reading.jpeg" alt="Reading" style="display:none;">
+                    <img src="reading.jpeg" alt="Reading" class="sr-only">
                 </a>
                 <a href="politics.html" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
                     <p>Politics</p>
-                    <img src="politics.jpeg" alt="Politics" style="display:none;">
+                    <img src="politics.jpeg" alt="Politics" class="sr-only">
                 </a>
                 <a href="current.html" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
                     <p>Current Affairs</p>
-                    <img src="current.jpeg" alt="Current Affairs" style="display:none;">
+                    <img src="current.jpeg" alt="Current Affairs" class="sr-only">
                 </a>
                 <a href="travel.html" class="hobby-box" style="background-image: url('travel.jpeg');" target="_blank">
                     <p>Travel</p>
-                    <img src="travel.jpeg" alt="Travel" style="display:none;">
+                    <img src="travel.jpeg" alt="Travel" class="sr-only">
                 </a>
             </div>
         </section>
