--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="url-to-image.jpg" />
     <meta property="og:url" content="url-to-website.com" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
         :root {
             --primary-color: #007BFF;
@@ -76,21 +77,14 @@
         }
 
         nav {
-            display: flex;
-            justify-content: center;
             background-color: var(--secondary-color);
-            padding: 10px 0;
-            position: sticky;
-            top: 0;
-            z-index: 10;
         }
 
         nav a {
             color: #fff;
             padding: 15px 20px;
             text-decoration: none;
-            text-align: center;
-            display: block;
+            display: inline-block;
             transition: background-color 0.3s ease, color 0.3s ease;
         }
 
@@ -104,67 +98,6 @@
             padding: 40px 20px;
             max-width: 1200px;
             margin: 0 auto;
-        }
-
-        .container h2,
-        .container h3 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            text-align: center;
-            color: var(--text-color);
-        }
-
-        .container h4 {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-            text-align: center;
-            color: #555;
-        }
-
-        .container p {
-            font-size: 1.2em;
-            line-height: 1.6;
-            text-align: center;
-            color: var(--light-text-color);
-        }
-
-        .welcome-container {
-            text-align: center;
-        }
-
-        .container ul {
-            font-size: 1.2em;
-            line-height: 1.6;
-            list-style: none;
-            padding: 0;
-            text-align: left;
-            color: var(--light-text-color);
-        }
-
-        .container ul li {
-            background-color: #fff;
-            margin: 10px 0;
-            padding: 15px;
-            border-left: 5px solid var(--primary-color);
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .centered-text {
-            text-align: center;
-            color: var(--text-color);
-        }
-
-        #contact {
-            padding-bottom: 80px;
-        }
-
-        footer {
-            background-color: var(--text-color);
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            width: 100%;
-            bottom: 0;
         }
 
         .hobbies-container {
@@ -205,42 +138,6 @@
 
         .hobby-box:hover p {
             background-color: rgba(0, 0, 0, 0.7);
-        }
-
-        @media (max-width: 768px) {
-            header {
-                padding: 60px 20px;
-            }
-
-            header h1 {
-                font-size: 2.5em;
-            }
-
-            header p {
-                font-size: 1.2em;
-            }
-
-            nav {
-                flex-direction: column;
-            }
-
-            .container h2,
-            .container h3 {
-                font-size: 2em;
-            }
-
-            .container h4 {
-                font-size: 1.2em;
-            }
-
-            .container p,
-            .container ul {
-                font-size: 1em;
-            }
-
-            .hobby-box {
-                height: 150px;
-            }
         }
 
         #back-to-top {
@@ -286,34 +183,56 @@
         <h1>Oliver Joergensen</h1>
         <p>Welcome to my personal website</p>
     </header>
-    <nav aria-label="Main Navigation">
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#career">Career</a>
-        <a href="#skills">Skills</a>
-        <a href="#activities">Hobbies & Interests</a>
-        <a href="#contact">Contact</a>
+    <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Oliver Joergensen</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#career">Career</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#activities">Hobbies & Interests</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
     <button id="back-to-top" aria-label="Back to top">↑</button>
     <main>
         <section id="home" class="container welcome-container">
-            <h2>Welcome</h2>
-            <p> Hi, my name is Oliver Joergensen. I am a Swiss citizen with Danish origins,
+            <h2 class="text-center my-4">Welcome</h2>
+            <p class="text-center"> Hi, my name is Oliver Joergensen. I am a Swiss citizen with Danish origins,
                 currently pursuing a Bachelor's degree in Political Science. I thrive in dynamic
                 environments and am passionate about new challenges, learning new things, and teamwork.</p>
         </section>
         <section id="about" class="container">
-            <h2>About Me</h2>
+            <h2 class="text-center my-4">About Me</h2>
             <p>My previous positions have equipped me with extensive experience in customer service and
                 payment processing, along with strong adaptability and teamwork skills developed through a variety of roles...</p>
-            <h3>Education</h3>
-            <ul>
-                <li>University of Zürich, BS: Major in Political Science, Minor in Mathematics</li>
-                <li>SIS Swiss International School, Matura, Zürich, 2018</li>
+            <h3 class="text-center my-3">Education</h3>
+            <ul class="list-group">
+                <li class="list-group-item">University of Zürich, BS: Major in Political Science, Minor in Mathematics</li>
+                <li class="list-group-item">SIS Swiss International School, Matura, Zürich, 2018</li>
             </ul>
         </section>
         <section id="career" class="container">
-            <h2>Career</h2>
+            <h2 class="text-center my-4">Career</h2>
             <div class="centered-text">
                 <h4>Joe & the Juice (2018 - 2020)</h4>
                 <p>Part-Time Employee: Juicer responsible for customer contact, product manufacture for direct sale, sales, and cash register management.</p>
@@ -324,21 +243,21 @@
             </div>
         </section>
         <section id="skills" class="container">
-            <h2>Skills</h2>
-            <h3>Languages</h3>
-            <ul>
-                <li>German: Native</li>
-                <li>Danish: Native</li>
-                <li>English: Fluent</li>
+            <h2 class="text-center my-4">Skills</h2>
+            <h3 class="text-center my-3">Languages</h3>
+            <ul class="list-group">
+                <li class="list-group-item">German: Native</li>
+                <li class="list-group-item">Danish: Native</li>
+                <li class="list-group-item">English: Fluent</li>
             </ul>
-            <h3>Other Skills</h3>
-            <ul>
-                <li>Analytical thinking from studying Political Science and Mathematics</li>
-                <li>Experienced in customer service and payment processing</li>
+            <h3 class="text-center my-3">Other Skills</h3>
+            <ul class="list-group">
+                <li class="list-group-item">Analytical thinking from studying Political Science and Mathematics</li>
+                <li class="list-group-item">Experienced in customer service and payment processing</li>
             </ul>
         </section>
         <section id="activities" class="container">
-            <h2>Hobbies & Interests</h2>
+            <h2 class="text-center my-4">Hobbies & Interests</h2>
             <div class="hobbies-container">
                 <a href="fitness.html" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
                     <p>Fitness</p>
@@ -367,17 +286,28 @@
             </div>
         </section>
         <section id="contact" class="container">
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:oliver.joergensen@outlook.com">oliver.joergensen@outlook.com</a></p>
+            <h2 class="text-center my-4">Contact</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </section>
     </main>
-    <footer>
+    <footer class="text-center py-3 bg-dark text-light">
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
         <div>
-            <a href="https://linkedin.com/in/oliverjoergensen" target="_blank">LinkedIn</a> |
-            <a href="https://twitter.com/oliverjoergensen" target="_blank">Twitter</a>
+            <a href="https://linkedin.com/in/oliverjoergensen" target="_blank" class="text-light">LinkedIn</a> |
+            <a href="https://twitter.com/oliverjoergensen" target="_blank" class="text-light">Twitter</a>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script>
         document.addEventListener('scroll', function () {
             const sections = document.querySelectorAll('section');
