--- a/fitness.html
+++ b/fitness.html
@@ -4,132 +4,352 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness - Oliver Joergensen</title>
+    <title>Oliver Joergensen</title>
+    <meta name="description" content="Personal website of Oliver Joergensen, a Political Science student with experience in customer service and a passion for learning new things.">
+    <meta name="keywords" content="Oliver Joergensen, Political Science, Customer Service, Learning">
+    <meta name="author" content="Oliver Joergensen">
+    <meta property="og:title" content="Oliver Joergensen" />
+    <meta property="og:description" content="Personal website of Oliver Joergensen, a Political Science student with experience in customer service and a passion for learning new things." />
+    <meta property="og:image" content="url-to-image.jpg" />
+    <meta property="og:url" content="url-to-website.com" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
+        :root {
+            --primary-color: #007BFF;
+            --secondary-color: #0056b3;
+            --background-color: #f9f9f9;
+            --text-color: #333;
+            --light-text-color: #666;
+            --hover-color: #003d80;
+            --font-family: 'Raleway', sans-serif;
+        }
+
         body {
-            font-family: 'Raleway', sans-serif;
+            font-family: var(--font-family);
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: var(--background-color);
+            color: var(--text-color);
+            line-height: 1.6;
         }
 
         header {
-            background-color: #007BFF;
+            background-color: var(--primary-color);
             color: #fff;
-            padding: 200px 20px;
+            padding: 100px 20px;
             text-align: center;
-            background-image: url('sports.tiff'); 
+            background-image: url('globe.tiff');
             background-size: cover;
             background-position: center;
             position: relative;
         }
 
+        header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.4);
+            z-index: 1;
+        }
+
+        header h1,
+        header p {
+            position: relative;
+            z-index: 2;
+        }
+
+        header h1 {
+            font-size: 3em;
+            margin: 0;
+            color: #fff;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        header p {
+            font-size: 1.5em;
+            margin: 10px 0 0;
+            color: #fff;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+        }
+
+        nav {
+            background-color: var(--secondary-color);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        nav a {
+            color: #fff;
+            padding: 15px 20px;
+            text-decoration: none;
+            display: inline-block;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        nav a:hover,
+        nav a.active {
+            background-color: var(--hover-color);
+            color: #f9f9f9;
+        }
+
         .container {
             padding: 40px 20px;
-            text-align: center;
-        }
-
-        .container h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-            color: #000;
-        }
-
-        .container p {
-            font-size: 1.2em;
-            line-height: 1.6;
-            color: #333;
-        }
-
-        .sports, .activities {
-            text-align: left;
-            max-width: 800px;
+            max-width: 1200px;
             margin: 0 auto;
         }
 
-        .sport, .activity {
-            background-color: #fff;
-            margin: 20px 0;
-            padding: 20px;
-            border-left: 5px solid #007BFF;
+        .hobbies-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
         }
 
-        .sport h3, .activity h3 {
-            margin-top: 0;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
+        .hobby-box {
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            overflow: hidden;
             text-align: center;
-            padding: 20px;
-            position: fixed;
+            transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+            background-size: cover;
+            background-position: center;
+            background-color: #e0e0e0;
+            position: relative;
+            display: flex;
+            align-items: flex-end;
+            height: 200px;
+        }
+
+        .hobby-box p {
+            margin: 0;
+            padding: 20px 10px;
+            font-size: 1.2em;
+            color: #fff;
+            background-color: rgba(0, 0, 0, 0.5);
             width: 100%;
-            bottom: 0;
+            box-sizing: border-box;
+        }
+
+        .hobby-box:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .hobby-box:hover p {
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+
+        #back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: none;
+            background-color: var(--primary-color);
+            color: #fff;
+            border: none;
+            border-radius: 50%;
+            padding: 10px 15px;
+            font-size: 1.5em;
+            cursor: pointer;
+            z-index: 10;
+        }
+
+        #back-to-top:hover {
+            background-color: var(--hover-color);
+        }
+
+        /* Additional styles for better accessibility */
+        a:focus {
+            outline: 2px dashed var(--primary-color);
+            outline-offset: 2px;
+        }
+
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            border: 0;
         }
     </style>
 </head>
 
 <body>
-    <header></header>
-    <div class="container">
-        <h2>This is my fitness page</h2>
-        <p>Here, you will find some information about my fitness lifestyle.</p>
-        <p>Fitness has always been a crucial part of my life. It helps me stay healthy, energized, and focused. I have tried various sports and enjoy different activities.</p>
-        
-        <div class="sports">
-            <h2>Sports I Have Tried</h2>
-            <div class="sport">
-                <h3>Swimming</h3>
-                <p>Enjoyed swimming for its full-body workout and the refreshing feeling of being in water.</p>
-            </div>
-            <div class="sport">
-                <h3>Football</h3>
-                <p>Played football in local clubs and enjoyed the teamwork and strategy involved in the game.</p>
-            </div>
-            <div class="sport">
-                <h3>Handball</h3>
-                <p>Participated in handball, appreciating the fast-paced and dynamic nature of the sport.</p>
-            </div>
-            <div class="sport">
-                <h3>Tennis</h3>
-                <p>Played tennis recreationally, enjoying the challenge and precision required in the sport.</p>
-            </div>
-            <div class="sport">
-                <h3>MMA</h3>
-                <p>Practiced Mixed Martial Arts, which helped improve my physical fitness and self-defense skills.</p>
-            </div>
-            <div class="sport">
-                <h3>Gym</h3>
-                <p>Currently focusing on gym workouts, which include strength training and cardio exercises.</p>
-            </div>
-        </div>
-
-        <div class="activities">
-            <h2>Activities I Enjoy</h2>
-            <div class="activity">
-                <h3>Skiing</h3>
-                <p>Enjoy the thrill of skiing down snowy slopes and the beautiful winter landscapes.</p>
-            </div>
-            <div class="activity">
-                <h3>Snowboarding</h3>
-                <p>Love the adrenaline rush and skill involved in snowboarding.</p>
-            </div>
-            <div class="activity">
-                <h3>Cycling</h3>
-                <p>Enjoy long cycling trips, exploring new areas, and the health benefits of cycling.</p>
-            </div>
-            <div class="activity">
-                <h3>Volleyball</h3>
-                <p>Play volleyball with friends, appreciating the teamwork and fun of the game.</p>
+    <header>
+        <h1>Oliver Joergensen</h1>
+        <p>Welcome to my personal website</p>
+    </header>
+    <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Oliver Joergensen</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#career">Career</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#activities">Hobbies & Interests</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
-    <footer>
+    </nav>
+    <button id="back-to-top" aria-label="Back to top">↑</button>
+    <main>
+        <section id="home" class="container welcome-container">
+            <h2 class="text-center my-4">Welcome</h2>
+            <p class="text-center"> Hi, my name is Oliver Joergensen. I am a Swiss citizen with Danish origins,
+                currently pursuing a Bachelor's degree in Political Science. I thrive in dynamic
+                environments and am passionate about new challenges, learning new things, and teamwork.</p>
+        </section>
+        <section id="about" class="container">
+            <h2 class="text-center my-4">About Me</h2>
+            <p>My previous positions have equipped me with extensive experience in customer service and
+                payment processing, along with strong adaptability and teamwork skills developed through a variety of roles...</p>
+            <h3 class="text-center my-3">Education</h3>
+            <ul class="list-group">
+                <li class="list-group-item">University of Zürich, BS: Major in Political Science, Minor in Mathematics</li>
+                <li class="list-group-item">SIS Swiss International School, Matura, Zürich, 2018</li>
+            </ul>
+        </section>
+        <section id="career" class="container">
+            <h2 class="text-center my-4">Career</h2>
+            <div class="centered-text">
+                <h4>Joe & the Juice (2018 - 2020)</h4>
+                <p>Part-Time Employee: Juicer responsible for customer contact, product manufacture for direct sale, sales, and cash register management.</p>
+                <h4>Kita Sumatra (03.2021 - 09.2021)</h4>
+                <p>Civilian service assignment involving household and environmental work, social pedagogy, and parental work.</p>
+                <h4>McDonald's (04.2022 - 02.2023)</h4>
+                <p>Crew Employee responsible for kitchen, storage, waste recycling, cleaning (cash desk, dining room, restrooms, parking lot, Playland, restaurant surroundings).</p>
+            </div>
+        </section>
+        <section id="skills" class="container">
+            <h2 class="text-center my-4">Skills</h2>
+            <h3 class="text-center my-3">Languages</h3>
+            <ul class="list-group">
+                <li class="list-group-item">German: Native</li>
+                <li class="list-group-item">Danish: Native</li>
+                <li class="list-group-item">English: Fluent</li>
+            </ul>
+            <h3 class="text-center my-3">Other Skills</h3>
+            <ul class="list-group">
+                <li class="list-group-item">Analytical thinking from studying Political Science and Mathematics</li>
+                <li class="list-group-item">Experienced in customer service and payment processing</li>
+            </ul>
+        </section>
+        <section id="activities" class="container">
+            <h2 class="text-center my-4">Hobbies & Interests</h2>
+            <div class="hobbies-container">
+                <a href="fitness.html" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
+                    <p>Fitness</p>
+                    <img src="gym.png" alt="Fitness" class="sr-only">
+                </a>
+                <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
+                    <p>Cooking</p>
+                    <img src="cooking.jpeg" alt="Cooking" class="sr-only">
+                </a>
+                <a href="reading.html" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
+                    <p>Reading</p>
+                    <img src="reading.jpeg" alt="Reading" class="sr-only">
+                </a>
+                <a href="politics.html" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
+                    <p>Politics</p>
+                    <img src="politics.jpeg" alt="Politics" class="sr-only">
+                </a>
+                <a href="current.html" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
+                    <p>Current Affairs</p>
+                    <img src="current.jpeg" alt="Current Affairs" class="sr-only">
+                </a>
+                <a href="travel.html" class="hobby-box" style="background-image: url('travel.jpeg');" target="_blank">
+                    <p>Travel</p>
+                    <img src="travel.jpeg" alt="Travel" class="sr-only">
+                </a>
+            </div>
+        </section>
+        <section id="contact" class="container">
+            <h2 class="text-center my-4">Contact</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
+    </main>
+    <footer class="text-center py-3 bg-dark text-light">
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
+        <div>
+            <a href="https://linkedin.com/in/oliverjoergensen" target="_blank" class="text-light">LinkedIn</a> |
+            <a href="https://twitter.com/oliverjoergensen" target="_blank" class="text-light">Twitter</a>
+        </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('scroll', function () {
+            const sections = document.querySelectorAll('section');
+            const navLinks = document.querySelectorAll('nav a');
+            let index = sections.length;
+
+            while (--index && window.scrollY + 50 < sections[index].offsetTop) { }
+
+            navLinks.forEach((link) => link.classList.remove('active'));
+            navLinks[index].classList.add('active');
+        });
+
+        document.querySelectorAll('nav a').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Back to top button
+        const backToTopButton = document.getElementById('back-to-top');
+
+        window.addEventListener('scroll', () => {
+            if (window.pageYOffset > 300) {
+                backToTopButton.style.display = 'block';
+            } else {
+                backToTopButton.style.display = 'none';
+            }
+        });
+
+        backToTopButton.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+    </script>
 </body>
 
 </html>
