--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
         :root {
-            --primary-color: #3498db;
-            --secondary-color: #2c3e50;
-            --background-color: #ecf0f1;
+            --primary-color: #ff7f50; /* Changed to a bright coral color */
+            --secondary-color: #ff6347; /* Tomato color */
+            --background-color: #f0f8ff; /* Alice blue */
             --text-color: #333;
             --light-text-color: #666;
-            --hover-color: #2980b9;
+            --hover-color: #ff4500; /* Orange red */
             --font-family: 'Raleway', sans-serif;
         }
 
@@ -336,7 +336,7 @@
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
         <div>
             <a href="https://linkedin.com/in/oliverjoergensen" target="_blank" class="text-light">LinkedIn</a> |
-            <a href="https://www.instagram.com" target="_blank" class="text-light">Instagram</a>
+            <a href="https://twitter.com/oliverjoergensen" target="_blank" class="text-light">Twitter</a>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
