--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
         :root {
-            --primary-color: #ff7f50; /* Changed to a bright coral color */
-            --secondary-color: #ff6347; /* Tomato color */
+            --primary-color: #1e90ff; /* Bright blue color */
+            --secondary-color: #4682b4; /* Steel blue color */
             --background-color: #f0f8ff; /* Alice blue */
             --text-color: #333;
             --light-text-color: #666;
-            --hover-color: #ff4500; /* Orange red */
+            --hover-color: #1c86ee; /* Dodger blue */
             --font-family: 'Raleway', sans-serif;
         }
 
@@ -320,10 +320,6 @@
             <div class="card">
                 <form>
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3">
                         <label for="message" class="form-label">Message</label>
                         <textarea class="form-control" id="message" rows="3"></textarea>
                     </div>
@@ -336,7 +332,7 @@
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
         <div>
             <a href="https://linkedin.com/in/oliverjoergensen" target="_blank" class="text-light">LinkedIn</a> |
-            <a href="https://twitter.com/oliverjoergensen" target="_blank" class="text-light">Twitter</a>
+            <a href="https://instagram.com" target="_blank" class="text-light">Instagram</a>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
