--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
             z-index: 1000;
         }
 
+        nav .navbar-brand {
+            font-size: 1.5em;
+            font-weight: 700;
+        }
+
         nav a {
             color: #fff;
             padding: 15px 20px;
@@ -214,7 +219,7 @@
     </header>
     <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Oliver Joergensen</a>
+            <a class="navbar-brand" href="#">OJ</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -318,13 +323,7 @@
         <section id="contact" class="container">
             <h2 class="text-center my-4">Contact</h2>
             <div class="card">
-                <form>
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea class="form-control" id="message" rows="3"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
+                <p class="text-center">You can reach me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
             </div>
         </section>
     </main>
@@ -332,7 +331,7 @@
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
         <div>
             <a href="https://linkedin.com/in/oliverjoergensen" target="_blank" class="text-light">LinkedIn</a> |
-            <a href="https://instagram.com" target="_blank" class="text-light">Instagram</a>
+            <a href="https://twitter.com/oliverjoergensen" target="_blank" class="text-light">Twitter</a>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
