--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </header>
     <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">OJ</a>
+            <a class="navbar-brand" href="#">Oliver Joergensen</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -323,15 +323,15 @@
         <section id="contact" class="container">
             <h2 class="text-center my-4">Contact</h2>
             <div class="card">
-                <p class="text-center">You can reach me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+                <p class="text-center">You can reach me at: <a href="mailto:oliver.joergensen@outlook.com">oliver.joergensen@outlook.com</a></p>
             </div>
         </section>
     </main>
     <footer class="text-center py-3 bg-dark text-light">
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
         <div>
-            <a href="https://linkedin.com/in/oliverjoergensen" target="_blank" class="text-light">LinkedIn</a> |
-            <a href="https://twitter.com/oliverjoergensen" target="_blank" class="text-light">Twitter</a>
+            <a href="https://linkedin.com" target="_blank" class="text-light">LinkedIn</a> |
+            <a href="https://Instagram.com" target="_blank" class="text-light">Instagram</a>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
