--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oliver Joergensen</title>
+    <title>Personal Website</title>
     <meta name="description" content="Personal website of Oliver Joergensen, a Political Science student with experience in customer service and a passion for learning new things.">
     <meta name="keywords" content="Oliver Joergensen, Political Science, Customer Service, Learning">
     <meta name="author" content="Oliver Joergensen">
-    <meta property="og:title" content="Oliver Joergensen" />
+    <meta property="og:title" content="Personal Website" />
     <meta property="og:description" content="Personal website of Oliver Joergensen, a Political Science student with experience in customer service and a passion for learning new things." />
     <meta property="og:image" content="url-to-image.jpg" />
     <meta property="og:url" content="url-to-website.com" />
@@ -214,12 +214,11 @@
 
 <body>
     <header>
-        <h1>Oliver Joergensen</h1>
-        <p>Welcome to my personal website</p>
+        <h1>Welcome to My Personal Website</h1>
+        <p>Discover my journey and interests</p>
     </header>
     <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Oliver Joergensen</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
